--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -16,4 +16,4 @@ table.table.table-hover
         td = task.created_at
         td 
            = link_to '編集', edit_task_path(task), class: 'btn btn-primary mr-3'
-           = link_to '削除', task_path(task), method: :delete, data: { confirm: "タスク「#{task.name}」を削除しますか？"}, class: 'btn btn-danger'
+           = link_to '削除', task_path(task), method: :delete, data: { confirm: "タスク「#{task.name}」を削除しますか。よろしいですか？"}, class: 'btn btn-danger'
